--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,6 @@
-.App {
-  text-align: center;
-}
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans&family=Poppins&display=swap");
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body {
+  margin: 0;
+  font-family: "Poppins", sans-serif;
 }
