--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans&family=Poppins&display=swap");
 
 body {
-  margin: 0;
   font-family: "Poppins", sans-serif;
+  width: 100%;  
+}
+
+*{
+  box-sizing: border-box;
+  margin: 0%;
+  padding: 0%;
+}
+.App{
+  width: 90%;
+  position: relative;
+  margin: 5%;
 }
