--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,40 +1,29 @@
 
 .navContainer{
-    margin-top: 5vh;
-    height: 10vh;
+    height: 20vh;
     width: 100%;
     position: relative;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;}
-.title{font-size: larger;}
-.subContainer{
+    justify-content: space-around;
+    align-items: center;}
+    .subContainer{
         position: absolute;
         left: 0%;
-    }
-.pokeballIcon{width: 5vw;}
+        display: flex;
+        flex-direction: row;
+        align-items: flex-end;}
+    .pokeballIcon{width: 20%;}
+    .title{font-size: 42px;font-weight: 900; margin-left: 5vw;}
 .sortButton{
+    width: 8vw;
+    height: 4vh;
     position: absolute;
     right: 0%;
 }
+.sortButton button{background-color: transparent; border: 0ch;}
 .input{width: 100%;}
 .list{
     width: 100%;
     height: 100%;
-    margin-top: 10vh; }    
-.cardContainer{
-    position: relative;
-    border: 2px solid;
-    width: 29%;
-    margin: 2%; 
-    display: inline-block;
-    border-radius: 5%;}
-.id{width: 90%;
-    text-align: end;}
-.cardImg{
-    width: 100%;}
-.card-body{
-    border-top: 2px solid;
-    width: 100%;
-    height: 5vh;}
-.card-text{text-align: center;}
+    margin-top: 2vh; }    
