--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,29 +1,42 @@
-
-.navContainer{
-    height: 20vh;
-    width: 100%;
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;}
-    .subContainer{
-        position: absolute;
-        left: 0%;
-        display: flex;
-        flex-direction: row;
-        align-items: flex-end;}
-    .pokeballIcon{width: 20%;}
-    .title{font-size: 42px;font-weight: 900; margin-left: 5vw;}
-.sortButton{
-    width: 8vw;
-    height: 4vh;
-    position: absolute;
-    right: 0%;
+.navContainer {
+  height: 20vh;
+  width: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
 }
-.sortButton button{background-color: transparent; border: 0ch;}
-.input{width: 100%;}
-.list{
-    width: 100%;
-    height: 100%;
-    margin-top: 2vh; }    
+.subContainer {
+  position: absolute;
+  left: 0%;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+}
+.pokeballIcon {
+  width: 20%;
+}
+.title {
+  font-size: 42px;
+  font-weight: 900;
+  margin-left: 5vw;
+}
+.sortButton {
+  width: 8vw;
+  height: 4vh;
+  position: absolute;
+  right: 0%;
+}
+.sortButton button {
+  background-color: transparent;
+  border: 0ch;
+}
+.input {
+  width: 100%;
+}
+.list {
+  width: 100%;
+  height: 100%;
+  margin-top: 2vh;
+}
