--- a/src/Components/PokemonScreen/PokemonScreen.css
+++ b/src/Components/PokemonScreen/PokemonScreen.css
@@ -28,7 +28,6 @@
 
 .imageContainer {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   margin: 0 auto;
   height: 30vh;
@@ -58,6 +57,34 @@
 .pokemonInformation {
   background-color: white;
   border-radius: 5px;
+}
+
+.specifications {
+  display: flex;
+  justify-content: space-around;
+  border: 0px 0px 2px 0px black solid;
+}
+
+.item {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.height {
+  border-left: 2px solid rgba(0, 0, 0, 0.136);
+  border-right: 2px solid rgba(0, 0, 0, 0.136);
+  padding-left: 60px;
+  padding-right: 60px;
+}
+
+.sub-div {
+  padding: 5vh;
+  justify-content: center;
+}
+.weightImage,
+.heigthImage {
+  height: 2vh;
+  width: 2vh;
 }
 
 h3 {
