--- a/src/Components/PokemonScreen/PokemonScreen.css
+++ b/src/Components/PokemonScreen/PokemonScreen.css
@@ -59,6 +59,12 @@
   border-radius: 5px;
 }
 
+.type {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
 .specifications {
   display: flex;
   justify-content: space-around;
@@ -87,6 +93,13 @@
   width: 2vh;
 }
 
+.type {
+  display: inline-block;
+  justify-content: center;
+
+  border-radius: 10%;
+  margin: 10vh;
+}
 h3 {
   text-align: center;
 }
