--- a/src/Components/PokemonScreen/PokemonScreen.css
+++ b/src/Components/PokemonScreen/PokemonScreen.css
@@ -9,7 +9,7 @@
 .PokemonScreen {
   border-radius: 5px;
   padding: 5px;
-  max-width: 650px;
+  max-width: 1000px;
   position: relative;
 }
 
@@ -18,7 +18,13 @@
   flex-direction: row;
   justify-content: space-between;
 }
-
+.subDiv{
+  display: flex;
+  flex-direction: row;
+  width: 20vw;
+  justify-content: space-around;
+  align-items: flex-start;
+}
 .pokemonName {
   color: white;
   font-weight: bolder;
@@ -28,21 +34,18 @@
 
 .imageContainer {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   margin: 0 auto;
   height: 30vh;
 }
 
-.slideButton {
-  text-decoration: none;
-  border: none;
-}
 
 .pokemonImage {
-  position: absolute;
   right: 20%;
   top: 15%;
   height: 30vh;
+  width: 20vw;
   z-index: +1;
 }
 
@@ -54,52 +57,68 @@
   height: 29vh;
 }
 
+h3 {
+  text-align: center;
+}
+.btnToChange{
+background-color:transparent;
+border: none;
+height: 5vh;
+width: 5vw;
+font-size: 50px;
+font-weight: lighter;
+color: white;
+}
+.carrousel{
+position: absolute;
+top: 25vh;
+width: 100%;
+height: 10vh;
+display: flex;
+flex-direction: row;
+justify-content: space-around;
+align-items: center;
+}
 .pokemonInformation {
   background-color: white;
   border-radius: 5px;
 }
-
-.type {
+.containerType{
+  padding-top: 15vh;
   display: flex;
-  flex-direction: row;
   justify-content: center;
+  align-items: center;  
 }
-
-.specifications {
-  display: flex;
-  justify-content: space-around;
-  border: 0px 0px 2px 0px black solid;
-}
-
-.item {
-  display: flex;
-  justify-content: flex-start;
-}
-
-.height {
-  border-left: 2px solid rgba(0, 0, 0, 0.136);
-  border-right: 2px solid rgba(0, 0, 0, 0.136);
-  padding-left: 60px;
-  padding-right: 60px;
-}
-
-.sub-div {
-  padding: 5vh;
-  justify-content: center;
-}
-.weightImage,
-.heigthImage {
-  height: 2vh;
-  width: 2vh;
-}
-
-.type {
-  display: inline-block;
-  justify-content: center;
-
-  border-radius: 10%;
-  margin: 10vh;
-}
-h3 {
+.txtType{
+  margin-left: 1vw;
+  margin-right: 1vw;
+  width: 5vw;
   text-align: center;
 }
+.about{
+margin-top: 3vh;
+}
+.containerSpecifications{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  text-align: center;
+}
+.center{
+  border-left: 2px solid black;
+  border-right: 2px solid black;
+  width: 33%;
+}
+.specification{
+display: flex;
+flex-direction: column;
+justify-content: space-around;
+}
+.sub-div{
+}
+label{color: gray;}
+.description{
+  display: flex;
+  justify-content: center;
+  padding: 5vw;
+  font-size: larger;}
